assets/section-footer.css
.footer .footer-top-content .footer-top-content-inner{
  display: grid;
}
.footer .footer-top-content .footer-top-content-inner.has-left-blocks{
  gap: 80px;
  grid-template-columns: 8fr 4fr;
}
 @media (max-width: 1400px) {
  .footer .footer-top-content .footer-top-content-inner.has-left-blocks{
    grid-template-columns: 3fr 2fr;
  }
}
/*
@media (max-width: 1200px) {
  .footer .footer-top-content .footer-top-content-inner.has-left-blocks{
    grid-template-columns: 60% 40%;
  }
} */
@media (max-width: 991px) {
  .footer .footer-top-content .footer-top-content-inner.has-left-blocks{
    grid-template-columns: 1fr;
  }
}
.footer .footer-top-content .footer-top-content-inner .footer-top-left > * + *{
  margin-top: 108px;
}
@media (max-width: 991px) {
  .footer .footer-top-content .footer-top-content-inner .footer-top-left > * + *{
    margin-top: 80px;
  }
}
.footer .footer-newsletter .newsletter-heading{
  font-family: var(--font-family-heading);
  font-size: 40px;  
  font-weight: 700;
  line-height: 40px;
  letter-spacing: -0.02em;
  margin-bottom: 56px;
  color: #000;
}
@media (max-width: 991px) {
  .footer .footer-newsletter .newsletter-heading{
    font-size: 24px;
    line-height: 24px;
    margin-bottom: 36px;
  }
  
}
.footer .footer-newsletter .field-inner{
  max-width: 320px;
  width: 100%;
  position: relative;
}
@media (max-width: 575px) {
  .footer .footer-newsletter .field-inner{
    max-width: 280px;
  }
}
.footer .footer-newsletter .field-inner .newsletter-form-input{
  border: transparent;
  background: transparent;
  height: 40px;
  border-bottom: 2px solid #000;
  width: 100%;
  font-family:var(--font-family-body);
  font-size: 20px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: -0.01em;
  color: #000;
  padding-top: 7px;
  padding-bottom: 19px;
}
@media (max-width: 991px) {
  .footer .footer-newsletter .field-inner .newsletter-form-input{
    font-size: 16px;
    line-height: 16px;
    padding-top: 8px;
    padding-bottom: 20px;
  }
}
.footer .footer-newsletter .field-inner .newsletter-form-input::placeholder{
  color: #000;
}
.footer .footer-newsletter .field-inner .newsletter-form-button{
  position: absolute;
  top: 0;
  right: 0;
}
.footer .footer-top-content .footer-navigation-link-wrapper{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 80px;
}

.footer .footer-top-content .footer-navigation-links-title {
  font-family: var(--font-family-heading);
  font-size: 24px;
  font-weight: 700;
  line-height: 32px;
  letter-spacing: -0.01em;
  color: #000;
  margin-bottom: 25px;
  margin-bottom: 36px;
  transition: .4s;
}
@media (max-width: 991px) {
  .footer .footer-navigation-links-list{
    height: 0; 
    overflow: hidden; 
    opacity: 0; 
    transition: 
    height 0.4s ease, 
    opacity 0.4s ease,
    padding-top 0.4s ease;
  }
  .footer .footer-top-content .footer-navigation-link-wrapper{
    grid-template-columns: 1fr;
    gap: 0;
  }
  .footer .footer-top-content .footer-navigation-links{
    padding-top: 5px;
  }
  .footer .footer-top-content .footer-navigation-links:not(:first-child){
    margin-top: 24px;
  }
  .footer .footer-top-content .footer-navigation-links-title{
    border-bottom: 1px solid #000;
    margin-bottom: 0;
    font-size: 16px;
    line-height: 16px;
    padding-bottom: 17px;
    position: relative;
    cursor: pointer;
  }
  .footer .footer-top-content .footer-navigation-links-title:before{
    content: "";
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 5px;
    width: 15px;
    height: 2px;
    background: #000;
    transition: .4s;
  }
  .footer .footer-top-content .footer-navigation-links-title:after{
    content: "";
    position: absolute;
    top: 50%;
    transform: translateY(-50%) rotate(90deg) scale(1);
    right: 5px;
    width: 15px;
    height: 2px;
    background: #000;
    transition: .4s;
  }
  .footer .footer-top-content .footer-navigation-links-title.menu-list-open:after{
    transform: translateY(-50%) rotate(90deg) scale(0);
  }
  .footer .footer-top-content .footer-navigation-links-title.menu-list-open + ul{
    padding-top: 24px;
  }
}
.footer .footer-top-content .footer-navigation-links-list li a {
  font-family: var(--font-family-body);
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: -0.01em;
  color: #000;
  position: relative;
}
.footer .footer-top-content .footer-navigation-links-list li a:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  height: 1px;
  background-color: rgb(var(--color-foreground));
  transition: .4s;
}
.footer .footer-top-content .footer-navigation-links-list li a:hover:after {
  width: 100%;
}

@media (max-width: 991px) {
  .footer .footer-top-content .footer-navigation-links-list li a{
    font-size: 16px;
    line-height: 16px;
  }
}
.footer .footer-top-content .footer-navigation-links-list li:not(:last-child){
  margin-bottom: 22px;
}
.footer .footer-top-right{
  display: flex;
  flex-direction: column;
  gap: 80px;
}
.footer .footer-copyright-inner .policies{
  display: flex;
  gap: 10px;
  flex-wrap: wrap;
}
.footer .footer-copyright-inner .copyright-content{
  font-family: var(--font-family-heading);
  font-size: 18px;
  font-weight: 700;
  line-height: 24px;
  color: #000;
  gap: 0 5px;
  word-break: break-word;
}
.footer .footer-copyright-inner .policies li a{
  font-family: var(--font-family-body);
  font-size: 18px;
  font-weight: 700;
  line-height: 18px;
  color: #000;
  word-break: break-word;
}
@media (max-width: 991px) {
  .footer .footer-copyright-inner .policies li a{
    font-size: 16px;
    line-height: 16px;
  }
  .footer .footer-copyright-inner .copyright-content{
  font-size: 16px;
}
}
.footer .footer-copyright-inner > * + *{
  margin-top: 26px;
}
@media (max-width: 575px) {
  .footer .footer-heading-logo-wrapper {
    max-width: 100% !important;
  }

}
.footer .copyright-bottom-text{
  font-family: var(--font-family-body);
  font-size: 20px;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: -0.01em;
  color: #000;
}
.footer .copyright-bottom-text a{
  text-decoration: underline;
  color: #000;
}
@media (max-width: 991px) {
  .footer .copyright-bottom-text{
    font-size: 14px;
    line-height: 20px;
  }
  .footer .footer-copyright-inner > * + *{
    margin-top: 24px;
  }
}
.footer .footer-bottom-content-inner{
  border-top: 1px solid #000;
  padding-top: 36px;
}
.footer .footer-payment{
  flex-grow: 1;
}
.footer .footer-payment .list{
  gap: 10px;
  justify-content: center;
}
@media (min-width: 992px) {
  .footer .footer-payment .list{
    justify-content: flex-start;
  }
  .footer .footer-payment .list li{
    width: 72px;
  height: 42px;
  overflow: hidden;
}
.footer .footer-payment .list li .payment-icon{
  width: 100%;
  height: 100%;
}
}
.footer .footer-bottom-content-inner{
  gap: 0 80px;
}
@media (max-width: 991px) {
  .footer .back-to-top{
    display: none;
  }
}
.footer .back-to-top{
  margin-left: auto;
  font-family: var(--font-family-heading);
  font-size: 18px;
  font-weight: 700;
  line-height: 28px;
  gap: 12px;
}
.footer .back-to-top span{
    width: 28px;
    height: 28px;
    border-radius: 24px;
    background: #000;
    transform: rotate(180deg);
}
.footer .back-to-top span svg path{
  fill: #fff;
}
.footer .footer-bottom-content {
  margin-top: 64px;
}

